# 100minds-mcp

./: .gitignore  .swarm-bead-id  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVAL_MEGAPLAN.md  LICENSE  Persisting Thompson stats...  README.md  SECURITY.md  Scenario benchmark:  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  validate-thinkers.yml
assets/: architecture.md  logo.txt
data/thinkers/business/: alex-osterwalder.json  andy-grove.json  ben-horowitz.json  cal-newport.json  clayton-christensen.json  darren-hardy.json  edwards-deming.json  eli-goldratt.json  geoffrey-moore.json  guy-kawasaki.json  matthew-skelton.json  michael-porter.json  paul-graham.json  peter-drucker.json  peter-thiel.json  rita-mcgrath.json  seth-godin.json  simon-wardley.json  (+3 more)
docs/plans/: 2026-01-29-100-thinkers-public-release.md
eval/scenarios/: CLAUDE.md  architecture.json  build-vs-buy.json  database.json  performance.json  rewrite.json  scaling.json  team.json  testing.json
output/: josh-2bukpl.json  josh-2sdjd4.json  josh-2wnec1.json  josh-3oo5b2.json
scripts/: consolidate-100.py  extract_real_outcomes.py  probe_v3.py  probe_v3_deep.py  probe_v4_swarm.py  train-pipeline.sh  train_neural_bandit.py
src/: CLAUDE.md  convenience.rs  counsel.rs  db.rs  embeddings.rs  lib.rs  main.rs  mcp.rs  neural_posterior.rs  outcome.rs  prd.rs  provenance.rs  templates.rs  types.rs
src/eval/: CLAUDE.md  bandit.rs  coverage.rs  data_driven.rs  judge.rs  llm_judge.rs  mod.rs  monte_carlo.rs  neural_training.rs  scenarios.rs  swarm_posterior.rs  synthetic.rs  thompson.rs
(+90 files in other folders)
